Dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@
 
 .dark {
     --color-bg-primary: #51523d;
-    --color-bg-primary: #303f5a;
+    --color-bg-primary: #52230e;
     --color-bg-secondary: #283141;
-    --color-text-primary: #F1DCA3;
+    --color-text-primary: #e4bf5b;
     --color-text-secondary: #e2e8f0;
     --color-text-accent: #81e6d9;
     --color-bg-input: #4a5361;
